// Vitest Snapshot v1

exports[`generateSitemap > should generate a sitemap 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
  <url>
    <loc>https://example.com</loc>
    <lastmod>2023-01-01T00:00:00.000Z</lastmod>
    <priority>1</priority>
  </url>
</urlset>"
`;

exports[`generateSitemap > should generate a sitemap with multiple entries 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\">
  <url>
    <loc>https://example.com</loc>
    <lastmod>2023-01-01T00:00:00.000Z</lastmod>
    <priority>1</priority>
  </url>
  <url>
    <loc>https://example.com/about</loc>
    <lastmod>2023-01-02T00:00:00.000Z</lastmod>
    <priority>0.5</priority>
  </url>
  <url>
    <loc>https://example.com/careers</loc>
    <priority>0.25</priority>
  </url>
</urlset>"
`;
